--- a/neuroevolution_of_augmenting_topologies_paper.tex
+++ b/neuroevolution_of_augmenting_topologies_paper.tex
@@ -199,9 +199,9 @@ This necessity of a randomly mutated initial population to produce innovation ho
 
 \subsection{Performance of NEAT} \label{sec:neat_performance}
 
-Stanley \& Miikkulainen also included thorough performance analysis in their papers introducing NEAT in 2002 and 2004 \cite{sta02_1, sta02_2, sta04}. Their analysis showed NEAT significantly outperforming most preceding NE methods in terms of speed and required evaluations in key benchmarks like the double pole balancing task \cite{and89} and the XOR topology building task.
+Stanley \& Miikkulainen analysis \cite{sta02_1, sta02_2, sta04} of NEAT significantly showed significant performance improvements in comparison to most preceding NE methods in terms of speed and required evaluations in key benchmarks like the double pole balancing task \cite{and89} and the XOR topology building task.
 
-The simpler of the two benchmarks - the XOR topology building task - is a sanity check for TWEANN algorithms. Because XOR is not linearly separable does a neural network require hidden units to solve it and therefore makes this benchmark suitable for testing NEATs' ability to evolve structure. It is clear that NEAT solves the XOR problem without trouble and in doing so keeps the topology small \cite[chap 4.1]{sta04}. 
+The XOR topology building task is a sanity check for \textit{Topology and Weight Evolving Artificial Neural Network} algorithms. Because XOR is not linearly separable, requires a neural network hidden units to solve it and therefore makes this benchmark suitable for testing NEATs' ability to evolve structure. It is clear that NEAT solves the XOR problem without trouble and in doing so keeps the topology small \cite[chap 4.1]{sta04}. 
 
 \begin{figure}
     \includegraphics[width=0.45\textwidth]{{Table_Comparison_DPNV_Benchmark_-_sta02_2}}
@@ -209,7 +209,7 @@ The simpler of the two benchmarks - the XOR topology building task - is a sanity
     \label{ill:table_dpnv_benchmark}
 \end{figure}
 
-However, the double pole balancing task is of more importance, as this benchmark is well suited for performance comparison. This benchmark has been used in reinforcement learning and neuroevolution research for over 30 years \cite[chap 3.A]{sta02_2} and consists of two poles connected to a moving cart by a hinge, whereas the neural network must apply force to the cart to keep the poles balanced for as long as possible. Figure \ref{ill:table_dpnv_benchmark} lists the table showing the results of the 'double pole balancing without velocity information' experiment, in which NEAT is by far the fastest system on this challenging task, clearly even outperforming ESP (Enforced SubPopulations by Gomez \& Miikkulainen \cite{gom99}). This is relevant as ESP, unlike all other NE systems at the time, performs at least in the other 'double pole balancing with velocity information' experiment at the same level as NEAT \cite[chap 4.3.2]{sta02_1}. This underlines NEATs' ability to perform especially well in feedback-sparse environments.
+However, the double pole balancing task is of more importance, as this benchmark is well suited for performance comparison. This benchmark has been used in reinforcement learning and neuroevolution research for over 30 years \cite[chap 3.A]{sta02_2} and consists of two poles connected to a moving cart by a hinge, whereas the neural network must apply force to the cart to keep the poles balanced for as long as possible. Figure \ref{ill:table_dpnv_benchmark} shows a performance comparison between NEAT and the two other benchmark neuroevolution algorithms at the time - \textit{Cellular Encoding} (abbr. CE) \cite{gru94} and \textit{Enforced SubPopulations} (abbr. ESP) \cite{gom99}. The superior performance of NEAT in comparison to ESP is especially noteworthy in this task, as, unlike all other NE algorithms at the time, ESP performs at in the 'double pole balancing with velocity information' experiment at the same level as NEAT \cite[chap 4.3.2]{sta02_1}. This underlines NEATs' ability to perform especially well in feedback-sparse environments.
 
 
 
@@ -217,10 +217,9 @@ However, the double pole balancing task is of more importance, as this benchmark
 
 \subsection{Practical Applications of NEAT}
 
-Practical applications of the NEAT system are plentiful as it is still relevant due to its high performance. One very prominent example of a great application of NEAT is the most accurate measurement to date of the mass of the top quark, which was computed by a very large team at the Tevatron collider in 2009 \cite{aal09}. Though NEAT was not only applied in physics, but also enabled pioneering work in advancing video game playing AI or medical AI. 
-The work \cite{hau12} of a single researcher - Matthew Hausknecht - on Atari video game playing utilizing HyperNEAT (a very promising Advancement of NEAT introduced in 2009) was so pioneering that it was later referenced by the DeepMind Team \cite{Mni13}, who eventually created the famous AlphaStar AI. NEAT was also applied in a recent study published in 2018, which compared the achieved accuracy of different neuroevolution approaches in the context of detecting tumors in medical images \cite{fra18}. NEATs' performance was similar to the established algorithms, even when executing a much smaller number of generation.
-    
-Each of these applications implemented their own version of NEAT, as - unlike for classical machine learning - there exists no well established framework for neuroevolution. The official NEAT software catalog \cite{neat_software19} lists 25 different implementations and libraries for vanilla NEAT alone, the most prominent one probably being NEAT-Python \cite{cod19} by CodeReclaimers. Training an agent to play SuperMario World by utilizing this NEAT-Python library can be realized in under 100 lines of code with good results \cite{pau19_smw}.
+Practical applications of the NEAT system are plentiful due to it being a benchmark algorithm in the field of neuroevolution. NEAT was successfully employed in a wide field of research, some among them being physics \cite{aal09}, medical diagnosis \cite{fra18}, video game AI \cite{hau12} or robotics \cite{cul15}.
+
+Each of these applications however implemented their own version of NEAT, as - unlike for classical machine learning - there exists no well established framework for neuroevolution. The official NEAT software catalog \cite{neat_software19} lists 25 different implementations and libraries for vanilla NEAT alone, the most prominent one probably being NEAT-Python \cite{cod19}. Training an agent to play SuperMario World by utilizing this NEAT-Python library can be realized in under 100 lines of code with good results \cite{pau19_smw}.
 
 There are also currently efforts being made \cite{pau19_tefne} to implement NEAT in the upcoming Tensorflow 2.0 \cite{tf_beta19} release as an add-on \cite{tf_addons19} library utilizing Tensorflows newly introduced dynamic computational graphs.
 
@@ -230,7 +229,7 @@ There are also currently efforts being made \cite{pau19_tefne} to implement NEAT
 
 \section{Conclusion}
 
-As this paper outlines - and the past decade proves - is neuroevolution a promising approach to developing topologies and weights of artificial neural networks. NEAT was a significant advancement for the field of neuroevolution at the time it was introduced in the year 2002 and is still to this day an important benchmark. Even so did the research community of neuroevolution not stop innovating and created groundbreaking new neuroevolution algorithms - some being advancements of the original NEAT. Stanley, Risi, D'Ambrosio and Lehman introduced HyperNEAT \cite{sta09} and its refinement ES-HyperNEAT \cite{ris11} in 2009/2011, further enhancing it with new fitness function objectives like \textit{Novelty Search} \cite{leh11} in 2011. Furthermore did Miikkulainen \& Liang bring the innovations of Deep Learning to neuroevolution introducing CoDeepNEAT \cite{mii17} in 2017, while Real \& Aggarwal were even able to design a neuroevolution system that surpasses hand-designs for the first time in 2018 \cite{rea19}.
+As this paper outlines is neuroevolution a promising approach to developing topologies and weights of artificial neural networks. NEAT was a significant advancement for the field of neuroevolution at the time it was introduced in the year 2002 and is still to this day an important benchmark. Even so did the research community of neuroevolution not stop innovating and created groundbreaking new neuroevolution algorithms - some being advancements of the original NEAT. Stanley, Risi, D'Ambrosio and Lehman introduced HyperNEAT \cite{sta09} and its refinement ES-HyperNEAT \cite{ris11} in 2009/2011, further enhancing it with new fitness function objectives like \textit{Novelty Search} \cite{leh11} in 2011. Furthermore did Miikkulainen \& Liang bring the innovations of Deep Learning to neuroevolution introducing CoDeepNEAT \cite{mii17} in 2017, while Real \& Aggarwal were even able to design a neuroevolution system that surpasses hand-designs for the first time in 2018 \cite{rea19}.
 
 Creating established neuroevolution frameworks that will efficiently use computational resources like the GPU will likely further this field of research even more, as the traditional machine learning frameworks already demonstrated.
 
@@ -255,6 +254,10 @@ I wish to thank Rezsa Farahani, from the Google Brain team, and Michael Adam, fr
   \bibitem{and89}
     Anderson - Learning to control an inverted pendulum using neural networks; 1989;
     \url{https://ieeexplore.ieee.org/document/24809}
+
+  \bibitem{gru94}
+    Gruau, Bernard-lyon, et al - Neural Network Synthesis Using Cellular Encoding And The Genetic Algorithm; 1994;
+    \url{https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.29.5939}
 
   \bibitem{yao99}
     Yao - Evolving Artificial Neural Networks; 1999;
@@ -318,7 +321,7 @@ I wish to thank Rezsa Farahani, from the Google Brain team, and Michael Adam, fr
 
   \bibitem{cir12}
     Ciresan, Giusti, et al - Deep Neural Networks Segment Neuronal Membranes in Electron Microscopy Images; 2012;
-    \url{http://papers.nips.cc/paper/4741-deep-neural-networks-segment-neuronal-membranes-in-electron-microscopy-images.pdf}
+    \url{http://people.idsia.ch/~juergen/nips2012.pdf}
 
   \bibitem{kri12}
     Krizhevsky, Sutskever, et al - ImageNet Classification with Deep Convolutional Neural Networks; 2012;
@@ -355,6 +358,10 @@ I wish to thank Rezsa Farahani, from the Google Brain team, and Michael Adam, fr
   \bibitem{kim15}
     Kim, Rigazio - Deep Clustered Convolutional Kernels; Mar 2015;
     \url{https://arxiv.org/abs/1503.01824}
+
+  \bibitem{cul15}
+    Cully, Clune, et al - Robots that can adapt like animals; May 2015;
+    \url{https://www.nature.com/articles/nature14422}
 
   \bibitem{fer16}
     Fernando, Banarse, et al - Convolution by Evolution; Jun 2016;
