Fix minor spelling mistakes

--- a/neuroevolution_of_augmenting_topologies_paper_trimmed.tex
+++ b/neuroevolution_of_augmenting_topologies_paper_trimmed.tex
@@ -219,9 +219,9 @@ However, the double pole balancing task is of more importance, as this benchmark
 
 Practical applications of the NEAT system are plentiful due to it being a benchmark algorithm in the field of neuroevolution. NEAT was successfully employed in a wide field of research, some among them being physics \cite{aal09}, medical diagnosis \cite{fra18}, video game AI \cite{hau12} or robotics \cite{cul15}.
 
-Each of these applications however implemented their own version of NEAT, as - unlike for classical machine learning - there exists no well established framework for neuroevolution. The official NEAT software catalog \cite{neat_software19} lists 25 different implementations and libraries for vanilla NEAT alone, the most prominent one probably being NEAT-Python \cite{cod19}. Training an agent to play SuperMario World by utilizing this NEAT-Python library can be realized in under 100 lines of code with good results \cite{pau19_smw}.
+Each of these applications however implemented their own version of NEAT, as - unlike for classical machine learning - there exists no well established framework for neuroevolution. The official NEAT software catalog \cite{neat_software19} lists 25 different implementations and libraries for vanilla NEAT alone, the most prominent one probably being NEAT-Python \cite{cod19}. Training an agent to play Super Mario World by utilizing this NEAT-Python library can be realized in under 100 lines of code with good results \cite{pau19_smw}.
 
-There are also currently efforts being made \cite{pau19_tefne} to implement NEAT in the upcoming Tensorflow 2.0 \cite{tf_beta19} release as an add-on \cite{tf_addons19} library utilizing Tensorflows newly introduced dynamic computational graphs.
+There are also currently efforts being made \cite{pau19_tefne} to implement NEAT in the upcoming Tensorflow 2.0 \cite{tf_beta19} release as an add-on \cite{tf_addons19} library utilizing Tensorflows' newly introduced dynamic computational graphs.
 
 
 
